--- a/templates/purchases/purchase_add.html
+++ b/templates/purchases/purchase_add.html
@@ -5,7 +5,21 @@
 
 <form method="POST">
     {% csrf_token %}
-    {{ form.as_p }}
+    {{purchase_formset.management_form}}
+    {% for form in purchase_formset %}
+    <div class="purchase-form">
+        {% for hidden in form.hidden_fields %}
+        {{hidden}}
+        {% endfor %}
+        {% for field in form.visible_fields %}
+        <div>
+        {{field.errors}}
+        {{field.label_tag}}
+        {{field}}
+        </div>
+        {% endfor %}
+    </div>
+    {% endfor %}
     <button type="submit">Add</button>
 </form>
 
