--- a/templates/budgets/monthly_budget_detail.html
+++ b/templates/budgets/monthly_budget_detail.html
@@ -7,10 +7,12 @@
 </p>
 
 <ul>
-{% for budget_item in monthly_budget.budget_items.all %}
-    <li><a href='{% url "budget_item_detail" year=monthly_budget.date.year month=monthly_budget.date.month category=budget_item.category.name %}'>{{budget_item.category}}</a> - {{budget_item.amount}} <a href='{% url "budgetitem_edit" year=monthly_budget.date.year month=monthly_budget.date.month category=budget_item.category.name %}'>Edit</a></li>
+{% for budget_item in budget_items%}
+    <li><a href='{% url "budget_item_detail" year=monthly_budget.date.year month=monthly_budget.date.month category=budget_item.category.name %}'>{{budget_item.category}}</a> - Budgeted: {{budget_item.amount}} - Spent: {{budget_item.spent}} - Remaining {{budget_item.diff}} <a href='{% url "budgetitem_edit" year=monthly_budget.date.year month=monthly_budget.date.month category=budget_item.category.name %}'>Edit</a></li>
 {% endfor %}
 </ul>
+
+
 
 <a href='{% url "budgetitem_create" year=monthly_budget.date.year month=monthly_budget.date.month %}'>Add budget item</a>
 
