--- a/templates/budgets/budgetitem_detail.html
+++ b/templates/budgets/budgetitem_detail.html
@@ -7,10 +7,29 @@
     <li>Amount: {{budget_item.amount}}</li>
 </ul>
 
-<ul>
-    {% for purchase in purchases %}
-    <li>{{purchase.item}} - {{purchase.amount}}</li>
-    {% endfor %}
-</ul>
+<div class="purchase-horizontal-grid">
+    <div>Date</div>
+    <div>Item</div>
+    <div>Amount</div>
+    <div>Source</div>
+    <div>Location</div>
+    <div>Category</div>
+    <div>Edit</div>
+    <div>Delete</div>
+</div>
+{% for purchase in purchases %}
+
+<div class="purchase-horizontal-grid">
+    <div>{{purchase.date}}</div>
+    <div>{{purchase.item}}</div>
+    <div>{{purchase.amount}}</div>
+    <div>{{purchase.source}}</div>
+    <div>{{purchase.location}}</div>
+    <div>{{purchase.category}}</div>
+    <div><a href='{% url "purchase_edit" pk=purchase.id %}'>Edit</a></div>
+    <div><a href='{% url "purchase_delete" pk=purchase.id %}'>Delete</a></div>
+</div>
+
+{% endfor %}
 
 {% endblock body %}
