--- a/templates/purchases/purchase_list.html
+++ b/templates/purchases/purchase_list.html
@@ -19,7 +19,7 @@
     <div>{{purchase.date}}</div>
     <div>{{purchase.item}}</div>
     <div>{{purchase.amount}}</div>
-    <div>{{purhcase.source}}</div>
+    <div>{{purchase.source}}</div>
     <div>{{purchase.location}}</div>
     <div>{{purchase.category}}</div>
     <div><a href='{% url "purchase_edit" pk=purchase.id %}'>Edit</a></div>
