--- a/templates/budgets/budgetitem_detail.html
+++ b/templates/budgets/budgetitem_detail.html
@@ -26,7 +26,7 @@
     <div>{{purchase.source}}</div>
     <div>{{purchase.location}}</div>
     <div>{{purchase.category}}</div>
-    <div><a href='{% url "purchase_edit" pk=purchase.id %}'>Edit</a></div>
+    <div><a href='{% url "purchase_edit" pk=purchase.id %}?next={{request.path|urlencode}}'>Edit</a></div>
     <div><a href='{% url "purchase_delete" pk=purchase.id %}'>Delete</a></div>
 </div>
 
