--- a/templates/budgets/budgetitem_detail.html
+++ b/templates/budgets/budgetitem_detail.html
@@ -1,9 +1,11 @@
 {% extends "_base.html" %}
 
+{% block body_heading %}
+    {{budget_item.category}} - {{budget_item.monthly_budget.date|date:"F-Y"}}
+{% endblock body_heading %}
 {% block body %}
+
 <ul>
-    <li>{{budget_item.monthly_budget.date.year}} - {{budget_item.monthly_budget.date.month}}</li>
-    <li>{{budget_item.category}}</li>
     <li>Amount: {{budget_item.amount}}</li>
 </ul>
 
